[package]
name = "partial-io"
version = "0.4.0"
edition = "2018"
authors = ["Rain <rain1@fb.com>"]
description = "Helpers to test partial, interrupted and would-block I/O operations."
documentation = "https://docs.rs/partial-io"
repository = "https://github.com/facebookincubator/rust-partial-io"
readme = "README.md"
keywords = ["partial", "interrupted", "wouldblock", "tokio", "quickcheck"]
categories = ["development-tools::testing", "asynchronous"]
license = "MIT"
exclude = [
  "TARGETS",
  "publish-docs.sh",
  "rust-partial-io.iml",
  ".travis.yml",
  "**/*.bk",
]

[dependencies]
futures = { version = "0.1", optional = true }
quickcheck = { version = "0.9", optional = true }
rand = { version = "0.7", optional = true }
tokio-io = { version = "0.1", optional = true }

[dev-dependencies]
lazy_static = "1"
quickcheck = "0.9"
tokio-core = "0.1"

[[example]]
name = "buggy_write"
required-features = ["quickcheck"]

[features]
tokio = ["tokio-io", "futures"]
quickcheck_types = ["quickcheck", "rand"]

[badges]
travis-ci = { repository = "facebookincubator/rust-partial-io" }

[package.metadata.docs.rs]
features = ["tokio", "quickcheck"]
