[package]
name = "partial-io"
version = "0.4.0"
edition = "2018"
authors = ["Rain <rain1@fb.com>"]
description = "Helpers to test partial, interrupted and would-block I/O operations."
documentation = "https://docs.rs/partial-io"
repository = "https://github.com/facebookincubator/rust-partial-io"
readme = "README.md"
keywords = ["partial", "interrupted", "wouldblock", "tokio", "quickcheck"]
categories = ["development-tools::testing", "asynchronous"]
license = "MIT"
exclude = [
  "TARGETS",
  "publish-docs.sh",
  "rust-partial-io.iml",
  ".travis.yml",
  "**/*.bk",
]

[dependencies]
futures = { version = "0.3", optional = true }
quickcheck = { version = "0.9", optional = true }
rand = { version = "0.8", optional = true }
bytes = { version = "0.5.6", optional = true }
pin-project = { version = "0.4.23", optional = true }
tokio = { version = "0.2", optional = true, features = ["io-util", "rt-core"] }

[dev-dependencies]
lazy_static = "1"
quickcheck = "0.9"
tokio = { version = "0.2", features = ["io-util", "macros", "rt-core", "rt-threaded"] }

[[example]]
name = "buggy_write"
required-features = ["quickcheck09"]

[features]
futures03 = ["futures", "pin-project"]
tokio02 = ["futures03", "tokio", "bytes"]
quickcheck09 = ["quickcheck", "rand"]

[badges]
travis-ci = { repository = "facebookincubator/rust-partial-io" }

[package.metadata.docs.rs]
all-features = true
