[package]
name = "partial-io"
version = "0.5.0"
edition = "2018"
authors = ["Rain <rain1@fb.com>"]
description = "Helpers to test partial, interrupted and would-block I/O operations."
documentation = "https://docs.rs/partial-io"
repository = "https://github.com/facebookincubator/rust-partial-io"
readme = "README.md"
keywords = ["partial", "interrupted", "wouldblock", "tokio", "quickcheck"]
categories = ["development-tools::testing", "asynchronous"]
license = "MIT"
exclude = [
  "TARGETS",
  "publish-docs.sh",
  "rust-partial-io.iml",
  ".travis.yml",
  "**/*.bk",
]

[dependencies]
futures = { version = "0.3", optional = true }
pin-project = { version = "1.0.6", optional = true }
quickcheck = { version = "1.0.3", optional = true }
rand = { version = "0.8", features = ["getrandom", "small_rng"], optional = true }
tokio = { version = "1.15.0", optional = true }

[dev-dependencies]
itertools = "0.10.0"
lazy_static = "1"
quickcheck = "1.0.3"
tokio = { version = "1.15.0", features = ["io-util", "macros", "rt-multi-thread"] }

[[example]]
name = "buggy_write"
required-features = ["quickcheck1"]

[features]
futures03 = ["futures", "pin-project"]
tokio1 = ["futures03", "tokio"]
quickcheck1 = ["quickcheck", "rand"]

[badges]
travis-ci = { repository = "facebookincubator/rust-partial-io" }

[package.metadata.docs.rs]
all-features = true
